[gh-39]: fixed table header align

--- a/src/styles/common/material-data-table.scss
+++ b/src/styles/common/material-data-table.scss
@@ -59,15 +59,14 @@
 
   & th {
     position: relative;
-    vertical-align: bottom;
     text-overflow: ellipsis;
     font-weight: bold;
-    line-height: 1.5px;
+    line-height: 1.5rem;
     letter-spacing: 0;
     height: 48px;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.54);
-    padding-bottom: 8px;
+    padding-bottom: 0;
     box-sizing: border-box;
   }
 }
